# Keystore.SDK

./: CMakeLists.txt  Keystore.SDK.pc.in  README.md
crypto/: CMakeLists.txt  bip39.c  bip39.h  random.cpp  random.h
crypto/words/: chinese_tr.h  chinese_zh.h  english.h  french.h  italian.h  japanese.h  korean.h  spanish.h
scripts/: build.sh
test/: CMakeLists.txt  main.cpp
